# Semester-project2

./: .gitignore  .gitmodules  CMakeLists.txt  Cmakefuckery.code-workspace  Color_Detection.py  Hej.cpp  Problemformulering.md  README.md  RubixCubeSolver.py  cv2test.py  farvetest__BLÅ.py  howtorunthisshit.md  pyproject.toml  yourprogram
C++/: Color_Detection.cpp  GripperClass.cpp  WifiConnect.cpp
C++/FinishedSetup/: CMakeLists.txt  IndernetForChads  IndernetForChads.cpp
C++/FinishedSetup/include/: CV2ForCPP.hpp  Kociemba.hpp
C++/FinishedSetup/source/: CV2ForCPP.cpp  Kociemba.cpp  main.cpp
Pictures/: Graph_scatterplot.mlx  LucasCube_GateScreen.txt  LucasCube_GateScreen27p.txt  LucasCube_GateScreen27pv2.txt  LucasCube_NoScreen2.txt  LucasCube_NoScreenOverTable.txt  LucasCube_SideScreen.txt  LucasCube_WithScreenOverTable.txt  OldCube_NoScreenOverTable.txt  OldCube_WithScreenOverTable.txt  matlab.mat
RTDE_controls/: CMakeLists.txt  Python_Version.py  README.md  call_position.cpp  main.cpp  pose_trans.cpp  test_movep.cpp  testy-westy.cpp  testy_pose.cpp
Windows/: CMakeLists.txt
include/: Algorithm.h  CameraCalibrate.h  Color_Detection.h  FromVectorToRobot.h  Gripper.h  IndernetForChads.h  KinematicsMath.h  pose_trans.h
python/: Color_Detection.py  Find_Cube_Test.py  RubixCubeSolver.py  TakePhoto.py  pyproject.toml
src/: Algorithm.cpp  CMakeLists.txt  CameraCalibrate.cpp  Color_Detection.cpp  CppCubeSolver.cpp  FromVectorToRobot.cpp  GripperClass.cpp  GripperConection.cpp  KinematicsMath.cpp  ManipolationOfRing.cpp  OpenCV.cpp  README.md  Test_main.cpp  call_position.cpp  cameraCalibration.sh  cube_rotations.cpp  fredes_test_program.cpp  magnus.cpp  main.cpp  main_old.cpp  maintest.cpp  pose_trans.cpp  test_moveCube.cpp
