[project]
name = "semester-project2"
version = "0.1.0"
description = ""
authors = [
    {name = "Mathias Bergholt Buhl ",email = "mbbu@universal-robots.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "kociemba (>=1.2.1,<2.0.0)",
    "numpy (>=2.4.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false